<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.quickstartapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="com.example.quickstartapplication.ui.knowledge.KnowledgeFragment"
        android:label="@string/knowledge"
        tools:layout="@layout/fragment_knowledge"
        />


    <fragment
        android:id="@+id/navigation_project"
        android:name="com.example.quickstartapplication.ui.project.ProjectFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.quickstartapplication.ui.mine.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine" />

    <fragment
        android:id="@+id/navgation_home_details"
        android:name="com.example.quickstartapplication.ui.home.HomeDetailsFragment"
        android:label="@string/home_detail"
        tools:layout="@layout/fragment_home_details"/>

</navigation>